Update June batch 2 06/30

--- a/learn-certs-pr/azure-ai-engineer.yml
+++ b/learn-certs-pr/azure-ai-engineer.yml
@@ -8,12 +8,17 @@ iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.s
 summary: |-
   <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong></font><br/><br/></div>
 
-  Azure AI-Ingenieure nutzen kognitive Dienste, maschinelles Lernen und Wissensmanagement, um Microsoft AI-Lösungen zu entwickeln und zu implementieren, die natürliche Sprachverarbeitung, Sprache, Computer Vision, Roboter und Mitarbeiter umfassen.
+  Kandidaten für Azure AI Engineer Associate-Zertifizierung sollten über Fachkenntnisse verfügen, die kognitive Dienste, maschinelles Lernen und Knowledge-Mining nutzen, um Microsoft AI-Lösungen zu entwickeln und zu implementieren, die Verarbeitung natürlicher Sprache, Sprache, Computervision und Konversations-AI umfassen.
+
+  Zu den Aufgaben eines dieser Rolle gehören das Analysieren von Anforderungen für AI-Lösungen, das Empfehlen entsprechender Tools und Technologien sowie das Entwerfen und Implementieren von AI-Lösungen, die die Anforderungen an Skalierbarkeit und Leistung erfüllen.
+
+  Azure AI Engineers übersetzen die Ideen von Lösungsarchitekten und arbeiten mit Datenwissenschaftlern, Datentechnikern, IoT-Spezialisten und software Entwicklern zusammen, um komplette End-to-End-Lösungen zu entwickeln.
+
+  Ein Kandidat für diese Prüfung sollte über Kenntnisse und Erfahrung im Entwerfen und Implementieren von AI-Apps und Agenten verfügen, die Microsoft Azure Cognitive Services, Azure Bot-Service, Azure Cognitive Search und Datenspeicherung in Azure verwenden. Darüber hinaus sollten Kandidaten in der Lage sein, Lösungen zu empfehlen, die Open Source-Technologien verwenden, die Komponenten des Azure AI-Portfolios und die verfügbaren Datenspeicheroptionen zu verstehen und zu erkennen, wann eine benutzerdefinierte API entwickelt werden sollte, um bestimmte Anforderungen zu erfüllen.
 subTitle: Azure AI-Ingenieure nutzen kognitive Dienste, maschinelles Lernen und Wissensmanagement, um Microsoft AI-Lösungen zu entwickeln und zu implementieren, die natürliche Sprachverarbeitung, Sprache, Computer Vision, Roboter und Mitarbeiter umfassen.
 levels:
 - intermediate
 skills:
-- 'HINWEIS: Die Aufzählungszeichen, die unter den im folgenden Dokument gemessenen Fähigkeiten angezeigt werden, sollen veranschaulichen, wie wir diese Fähigkeiten bewerten. Diese Liste ist nicht endgültig oder vollständig.'
 - Lösungsanforderungen analysieren
 - Konzipieren von AI-Lösungen
 - Implementieren und Überwachen von AI-Lösungen
