--- a/learn-certs-pr/azure-ai-fundamentals.yml
+++ b/learn-certs-pr/azure-ai-fundamentals.yml
@@ -2,28 +2,18 @@
 title: 'Microsoft Certified: Azure AI Fundamentals'
 metadata:
   title: 'Microsoft Certified: Azure AI Fundamentals'
-  description: Diese Zertifizierung wird am oder um den 8. Juni 2020 verfügbar sein. Azure AI Fundamentals validiert grundlegende Kenntnisse über Konzepte für maschinelles Lernen und künstliche Intelligenz sowie zugehörige Microsoft Azure-Services.
+  description: Azure AI Fundamentals validiert grundlegende Kenntnisse über Konzepte für maschinelles Lernen und künstliche Intelligenz sowie zugehörige Microsoft Azure-Services.
 uid: certification.azure-ai-fundamentals
 iconUrl: /media/learn/certification/badges/microsoft-certified-fundamentals-badge.svg
-summary: |-
-  <div><strong><font color='red'>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</font></strong><br/><br/></div>
-
-  Kandidaten für Azure AI Fundamentals certification sollten über grundlegende Kenntnisse der Konzepte maschinellen Lernens (ML) und künstlicher Intelligenz (AI) sowie der zugehörigen Microsoft Azure-Services verfügen.  
-
-  Diese Zertifizierung bietet die Gelegenheit, Kenntnisse über gängige ML- und AI-Workloads und deren Implementieren in Azure zu demonstrieren.  
-
-  Diese Zertifizierung richtet sich an Kandidaten mit technischem als auch nichttechnischem Hintergrund. Erfahrung in Data-Science und Software-Engineering ist nicht erforderlich. Einige allgemeine Programmierkenntnisse oder -erfahrungen wären jedoch von Vorteil.  
-
-  Azure AI-Grundlagen können verwendet werden, um sich auf andere rollenbasierte Azure-Zertifizierungen wie Azure Data Scientist Associate oder Azure AI Engineer Associate vorzubereiten. Dies ist jedoch keine Voraussetzung für eine dieser Zertifizierungen.  
-
-  <div><br/><strong>Hinweis&#58; Diese Zertifizierung wird am oder um den 8. Juni 2020 verfügbar sein.</strong></div>
-subTitle: Diese Zertifizierung wird am oder um den 8. Juni 2020 verfügbar sein. Azure AI Fundamentals validiert grundlegende Kenntnisse über Konzepte für maschinelles Lernen und künstliche Intelligenz sowie zugehörige Microsoft Azure-Services.
+summary: "<div><strong><font color='red'>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</font></strong><br/><br/></div>\r\n\r\nKandidaten für Azure AI Fundamentals certification sollten über grundlegende Kenntnisse der Konzepte maschinellen Lernens (ML) und künstlicher Intelligenz (AI) sowie der zugehörigen Microsoft Azure-Services verfügen.  \r\n\r\nDiese Zertifizierung bietet die Gelegenheit, Kenntnisse über gängige ML- und AI-Workloads und deren Implementieren in Azure zu demonstrieren.  \r\n\r\nDiese Zertifizierung richtet sich an Kandidaten mit technischem als auch nichttechnischem Hintergrund. Erfahrung in Data-Science und Software-Engineering ist nicht erforderlich. Einige allgemeine Programmierkenntnisse oder -erfahrungen wären jedoch von Vorteil.  \r\n\r\nAzure AI-Grundlagen können verwendet werden, um sich auf andere rollenbasierte Azure-Zertifizierungen wie Azure Data Scientist Associate oder Azure AI Engineer Associate vorzubereiten. Dies ist jedoch keine Voraussetzung für eine dieser Zertifizierungen."
+subTitle: Azure AI Fundamentals validiert grundlegende Kenntnisse über Konzepte für maschinelles Lernen und künstliche Intelligenz sowie zugehörige Microsoft Azure-Services.
 levels:
 - beginner
 skills:
 - AI-Workloads und Überlegungen dazu beschreiben
 - Grundprinzipien des maschinellen Lernens in Azure beschreiben
 - Funktionen von Computer Vision-Workloads in Azure beschreiben
+- Funktionen von NLP-Workloads beschreiben (Natural Language Processing) in Azure
 - Beschreiben der Funktionen von dialogorientierten AI-Workloads in Azure
 roles:
 - ai-engineer
