--- a/learn-certs-pr/azure-for-sap-workloads-specialty.yml
+++ b/learn-certs-pr/azure-for-sap-workloads-specialty.yml
@@ -1,19 +1,26 @@
 ### YamlMime:Certification
 title: 'Microsoft Certified: Azure for SAP Workloads Specialty'
 metadata:
-  title: 'Microsoft Certified:  Azure for SAP Workloads Specialty'
-  description: Architekten von Azure for SAP Workloads verfügen über umfangreiche Erfahrung und Kenntnisse des SAP Landscape-Zertifizierungsprozesses und der Branchenstandards, die speziell für den langfristigen Betrieb einer SAP-Lösung gelten.
+  title: 'Microsoft Certified: Azure for SAP Workloads Specialty'
+  description: Architekten oder Ingenieure von Microsoft Azure für SAP Workloads verfügen über umfassende Erfahrung und Kenntnisse der SAP-Systemlandschaft und der Industriestandards, die für den langfristigen Betrieb einer SAP-Lösung in Azure spezifisch sind.
 uid: certification.azure-for-sap-workloads-specialty
 iconUrl: /media/learn/certification/badges/microsoft-certified-specialty-badge.svg
 summary: |-
   <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong></font><br/><br/></div>
 
-  Architekten von Azure for SAP Workloads verfügen über umfangreiche Erfahrung und Kenntnisse des SAP Landscape-Zertifizierungsprozesses und der Branchenstandards, die speziell für den langfristigen Betrieb einer SAP-Lösung gelten.
-subTitle: Architekten von Azure for SAP Workloads verfügen über umfangreiche Erfahrung und Kenntnisse des SAP Landscape-Zertifizierungsprozesses und der Branchenstandards, die speziell für den langfristigen Betrieb einer SAP-Lösung gelten.
+  Kandidaten für Azure for SAP Workloads Specialty certification sollten Architekten oder Ingenieure sein, die über umfassende Erfahrung und Kenntnisse der SAP-Systemlandschaft und der Industriestandards verfügen, die für den langfristigen Betrieb einer SAP-Lösung unter Microsoft Azure spezifisch sind.
+
+  Zu den Aufgaben für diese Rolle gehören Empfehlungen zu Services und die jeweilige Anpassung der Ressourcen an die optimale Ausfallsicherheit, Leistung, Skalierung, Bereitstellung, Größe und Überwachung.
+
+  Architekten oder Ingenieure von Azure für SAP-Workload-Partner arbeiten mit Cloud-Administratoren, Cloud-Datenbankadministratoren und Kunden zusammen, um Lösungen zu implementieren.
+
+  Ein Kandidat für diese Zertifizierungs sollte über umfangreiche Erfahrung und Kenntnisse in SAP-Anwendungen verfügen&#58; SAP HANA, S / 4HANA, SAP NetWeaver, SAP BW / 4HANA, Betriebssystemserver für SAP-Anwendungen und -Datenbanken, Azure-Portal, ARM-Vorlagen, Betriebssysteme, Virtualisierung, Cloud-Infrastruktur, Speicherstrukturen, Hochverfügbarkeitsdesign, Disaster Recovery-Design, Datenschutz Konzepte und Vernetzung.
+
+  Für diese rolle wird dringend empfohlen, zusätzlich zu den SAP-HANA- und Linux-Zertifizierungen eine Azure Administrator Associate- oder Azure Solutions Architect Expert-Zertifizierung zu erwerben.
+subTitle: Architekten oder Ingenieure von Microsoft Azure für SAP Workloads verfügen über umfassende Erfahrung und Kenntnisse der SAP-Systemlandschaft und der Industriestandards, die für den langfristigen Betrieb einer SAP-Lösung in Azure spezifisch sind.
 levels:
 - advanced
 skills:
-- 'HINWEIS: Die Aufzählungszeichen, die unter den im folgenden Dokument gemessenen Fähigkeiten angezeigt werden, sollen veranschaulichen, wie wir diese Fähigkeiten bewerten. Diese Liste ist nicht endgültig oder vollständig.'
 - SAP-Workloads nach Azure übertragen
 - Erstellen einer Azure-Lösung zur Unterstützung von SAP-Workloads
 - Erstellen und Bereitstellen von Azure SAP Workloads
