--- a/learn-certs-pr/d365-functional-consultant-supply-chain-management.yml
+++ b/learn-certs-pr/d365-functional-consultant-supply-chain-management.yml
@@ -13,8 +13,7 @@ subTitle: 'Dynamics 365 Supply Chain Management Functional Consultants rationali
 levels:
 - intermediate
 skills:
-- 'HINWEIS: Die Aufzählungszeichen, die unter den im folgenden Dokument gemessenen Fähigkeiten angezeigt werden, sollen veranschaulichen, wie wir diese Fähigkeiten bewerten. Diese Liste ist nicht endgültig oder vollständig.'
-- Verwendung gängiger Funktionen und Tools zur Implementieren
+- Verwendung gängiger Funktionen und Tools zur Implementierung
 - Konfigurieren von Sicherheit, Prozessen und Optionen
 - Durchführen der Datenmigration
 - Überprüfung und Support der Lösung
