--- a/learn-certs-pr/d365-fundamentals.yml
+++ b/learn-certs-pr/d365-fundamentals.yml
@@ -2,12 +2,12 @@
 title: 'Microsoft Certified: Dynamics 365 Fundamentals'
 metadata:
   title: 'Microsoft Certified: Dynamics 365 Fundamentals'
-  description: 'Beweisen Sie, dass Sie Microsoft Dynamics 365 verstehen. Künstliche Intelligenz (KI); gemischte Realität (MR); die Power-Plattform; Cloud-Konzepte; Cloud-Sicherheit; Dynamics 365-Sicherheit; Gemeinsamer Daten-Service; Dynamics 365-Berichterstellung; Dynamics 365-Integrationen; und Cloud-Bereitstellung. '
+  description: 'Beweisen Sie, dass Sie Microsoft Dynamics 365 verstehen. Künstliche Intelligenz (KI); gemischte Realität (MR); die Power-Plattform; Cloud-Konzepte; Cloud-Sicherheit; Dynamics 365-Sicherheit; Gemeinsamer Daten-Service; Dynamics 365-Berichterstellung; Dynamics 365-Integrationen; und Cloud-Bereitstellung.'
 uid: certification.d365-fundamentals
 iconUrl: /media/learn/certification/badges/microsoft-certified-fundamentals-badge.svg
-summary: 
-  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
-  
+summary: |-
+  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong></font><br/><br/></div>
+
   Beweisen Sie, dass Sie Microsoft Dynamics 365 verstehen. Künstliche Intelligenz; gemischte Realität; die Power-Plattform; Cloud-Konzepte; Cloud-Sicherheit; Dynamics 365-Sicherheit; Gemeinsamer Daten-Service; Dynamics 365-Berichterstellung; Dynamics 365-Integrationen; und Cloud-Bereitstellung.
 subTitle: 'Beweisen Sie, dass Sie Microsoft Dynamics 365 verstehen. Künstliche Intelligenz (KI); gemischte Realität (MR); die Power-Plattform; Cloud-Konzepte; Cloud-Sicherheit; Dynamics 365-Sicherheit; Gemeinsamer Daten-Service; Dynamics 365-Berichterstellung; Dynamics 365-Integrationen; und Cloud-Bereitstellung.'
 levels:
