--- a/learn-certs-pr/exams/70-345.yml
+++ b/learn-certs-pr/exams/70-345.yml
@@ -8,7 +8,7 @@ displayName: 70-345
 summary: |-
   <div>
   <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
-  <div><strong>Diese Prüfung wird am 31. Januar 2021 um 23&#58;59 Uhr (Ortszeit) eingestellt. Nach diesem Datum können Sie die Prüfung nicht mehr ablegen. Erfahren Sie mehr über <a href='/learn/certifications/retired-certification-exams'>bevorstehende Prüfungseinstellungen</a>.<br/><br/></strong></div>
+  <div><strong>Dieses examens wird am 31. Januar 2021 um 23&#58;59 Uhr (Ortszeit) eingestellt. Nach diesem Datum können Sie die Prüfung nicht mehr ablegen. Mehr erfahren über <a href='/learn/certifications/retired-certification-exams'>bevorstehende Prüfungseinstellungen</a>.<br/><br/></strong></div>
   </div>
 
   Kandidaten für diese Prüfung sind IT-Berater oder leitende Administratoren, die als technischer Leiter eines Teams von Administratoren fungieren. Die Kandidaten sollten mit den Anforderungen für die Integration von Microsoft Exchange Server mit Skype for Business und Office 365 vertraut sein.
@@ -31,7 +31,6 @@ locales:
 levels:
 - advanced
 skills:
-- 'HINWEIS: Die Aufzählungszeichen, die unter den im folgenden Dokument gemessenen Fähigkeiten angezeigt werden, sollen veranschaulichen, wie wir diese Fähigkeiten bewerten. Diese Liste ist nicht endgültig oder vollständig.'
 - Planen, Bereitstellen, Verwalten und Beheben von Problemen bei Mailbox-Datenbanken (15-20%)
 - Planen, Bereitstellen, Verwalten und Behandeln von Client-Zugriffsdiensten (15-20%)
 - Planen, Bereitstellen, Verwalten und Behandeln von Transportdiensten (15-20%)
@@ -57,7 +56,7 @@ resources:
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Unterkünfte anfordern
-  description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
+  description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
   href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
