--- a/learn-certs-pr/exams/77-726.yml
+++ b/learn-certs-pr/exams/77-726.yml
@@ -1,17 +1,26 @@
 ### YamlMime:Examination
 title: 'Word 2016 Expert: Creating Documents for Effective Communication'
 metadata:
-  title: 'Prüfung 77-726: Word 2016 Expert: Creating Documents for Effective Communication'
-  description: 'Prüfung 77-726: Word 2016 Expert: Creating Documents for Effective Communication'
+  title: 'Exam 77-726: Word 2016 Expert: Creating Documents for Effective Communication'
+  description: 'Exam 77-726: Word 2016 Expert: Creating Documents for Effective Communication'
 uid: exam.77-726
 displayName: 77-726
-summary: "Kandiaten auf Experten Niveau für die Word 2016 Prüfung können die forgeschrittenen Funktionen von Word 2016 für Dokument und Contant-Management und für fortgeschrittenes Formatieren verwenden.\n\nSie schaffen und managen professionelle Dokumente mit vier oder mehr Seiten für verschiedenste Zwecke und Situationen. Sie passen ihre Word-Umgebungen so an, dass die Projektanforderungen erfüllt und die Produktivität gesteigert wird. Zu den Beispielen für Dokumente auf Expert-Level gehören ein Geschäftsplan, eine Forschungsarbeit, ein Buch, eine spezielle Broschüre und ein Serienbrief. Die Kandidaten nehmen dabei u. a. die Rollen von Bearbeitern, Projektmanagern, Business Information Spezialisten, Ausbildern und andere.\n\nMicrosoft Office Specialist (MOS) 2016 Zertifizierungsprüfungen führen ein neues leistungsbasiertes Format ein, mit dem die Kenntnisse, Fähigkeiten und Fähigkeiten eines Kandidaten mit Hilfe der MOS 2016-Programme besser getestet werden können&#58; \n- MOS 2016 Exam Task Instructions enthalten in der Regel nicht den Befehlsnamen, wie in früheren Versionen. So werden beispielsweise Funktionsnamen vermieden und durch Deskriptoren ersetzt. Das bedeutet, dass die Kandidaten den Zweck und die gemeinsame Nutzung der Programmfunktionalität verstehen müssen, um die Aufgaben in jedem der Projekte erfolgreich zu bewältigen.\n- Das MOS 2016-Prüfungsformat umfasst mehrere Projekte.\n"
+summary: |+
+  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
+
+  Kandiaten auf Experten Niveau für die Word 2016 Prüfung können die forgeschrittenen Funktionen von Word 2016 für Dokument und Contant-Management und für fortgeschrittenes Formatieren verwenden.
+
+  Sie schaffen und managen professionelle Dokumente mit vier oder mehr Seiten für verschiedenste Zwecke und Situationen. Sie passen ihre Word-Umgebungen so an, dass die Projektanforderungen erfüllt und die Produktivität gesteigert wird. Zu den Beispielen für Dokumente auf Expert-Level gehören ein Geschäftsplan, eine Forschungsarbeit, ein Buch, eine spezielle Broschüre und ein Serienbrief. Die Kandidaten nehmen dabei u. a. die Rollen von Bearbeitern, Projektmanagern, Business Information Spezialisten, Ausbildern und andere.
+
+  Microsoft Office Specialist (MOS) 2016 Zertifizierungsprüfungen führen ein neues leistungsbasiertes Format ein, mit dem die Kenntnisse, Fähigkeiten und Fähigkeiten eines Kandidaten mit Hilfe der MOS 2016; besser getestet werden können&#58;
+  - MOS 2016 Exam Task Instructions enthalten in der Regel nicht den Befehlsnamen, wie in früheren Versionen. So werden beispielsweise Funktionsnamen vermieden und durch Deskriptoren ersetzt. Das bedeutet, dass die Kandidaten den Zweck und die gemeinsame Nutzung der Programmfunktionalität verstehen müssen, um die Aufgaben in jedem der Projekte erfolgreich zu bewältigen.
+  - Das MOS 2016-Prüfungsformat umfasst mehrere Projekte.
 subTitle: Kandiaten auf Experten Niveau für die Word 2016 Prüfung können die forgeschrittenen Funktionen von Word 2016 für Dokument und Contant-Management und für fortgeschrittenes Formatieren verwenden.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3XXRD
 providers:
-  - providerType: certiport
-    examUrl: https://www.certiport.com/locator
+- providerType: certiport
+  examUrl: http://www.certiport.com/locator
 locales:
 - en
 - zh-cn
@@ -38,14 +47,15 @@ relatedCertifications:
     uid: certification.mos-word-2016-expert
 resources:
 - title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Unterkünfte anfordern
-  description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
-  href: https://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
+  description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
+  href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
+
