--- a/learn-certs-pr/exams/77-728.yml
+++ b/learn-certs-pr/exams/77-728.yml
@@ -1,17 +1,26 @@
 ### YamlMime:Examination
 title: 'Excel 2016 Expert: Interpreting Data for Insights'
 metadata:
-  title: 'Prüfung 77-728: Excel 2016 Expert: Interpreting Data for Insights'
-  description: 'Prüfung 77-728: Excel 2016 Expert: Interpreting Data for Insights'
+  title: 'Exam 77-728: Excel 2016 Expert: Interpreting Data for Insights'
+  description: 'Exam 77-728: Excel 2016 Expert: Interpreting Data for Insights'
 uid: exam.77-728
 displayName: 77-728
-summary: "Kandidaten, die als Experten für die Microsoft Excel 2016-Prüfung gelten, sollten fortgeschrittene Kenntnisse der Excel-Umgebung haben und andere bei der richtigen Nutzung der Funktionen anleiten können.\n\nKandidaten sollten in der Lage sein, professionelle Spreadsheets für vielerlei Zwecke und Situationen zu erstellen, zu verwalten und zu verteilen. Sie passen ihre Excel-Umgebungen so an, dass die Projektanforderungen erfüllt und die Produktivität gesteigert wird. Zu den Beispiele für Arbeitsmappen auf Expert-Level gehören benutzerdefinierte Geschäftsvorlagen, mehrachsige Finanzdiagramme, Amortisierungstabellen und Bestandsverzeichnisse. Kandidaten können z. B. als Buchhalter, Finanzanalysten, Datenanalytiker, Bankkaufleute usw. tätig sein.\n\nMicrosoft Office Specialist (MOS) 2016 Zertifizierungsprüfungen führen ein neues leistungsbasiertes Format ein, mit dem die Kenntnisse, Fähigkeiten und Fähigkeiten eines Kandidaten mit Hilfe der MOS 2016-Programme besser getestet werden können&#58; \n- MOS 2016 Exam Task Instructions enthalten in der Regel nicht den Befehlsnamen, wie in früheren Versionen. So werden beispielsweise Funktionsnamen vermieden und durch Deskriptoren ersetzt. Das bedeutet, dass die Kandidaten den Zweck und die gemeinsame Nutzung der Programmfunktionalität verstehen müssen, um die Aufgaben in jedem der Projekte erfolgreich zu bewältigen.\n- Das MOS 2016-Prüfungsformat umfasst mehrere Projekte. \n"
-subTitle: Kandidaten, die als Experten für die Microsoft Excel 2016-Prüfung gelten, sollten fortgeschrittene Kenntnisse der Excel-Umgebung haben und andere bei der richtigen Nutzung der Funktionen anleiten können.
+summary: |+
+  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
+
+  Kandidaten auf Excel-Expertenebene für die Microsoft Excel  2016-Prüfung sollten fortgeschrittene Kenntnisse der Excel-Umgebung haben und andere bei der richtigen Nutzung der Funktionen  anleiten können.
+
+  Kandidaten sollten in der Lage sein, professionelle Spreadsheets für vielerlei Zwecke und Situationen zu erstellen, zu verwalten und zu verteilen. Sie passen ihre Excel-Umgebungen so an, dass die Projektanforderungen erfüllt und die Produktivität gesteigert wird. Zu den Beispiele für Arbeitsmappen auf Expert-Level gehören benutzerdefinierte Geschäftsvorlagen, mehrachsige Finanzdiagramme, Amortisierungstabellen und Bestandsverzeichnisse. Kandidaten können z. B. als Buchhalter, Finanzanalysten, Datenanalytiker, Bankkaufleute usw. tätig sein.
+
+  Microsoft Office Specialist (MOS) 2016 Zertifizierungsprüfungen führen ein neues leistungsbasiertes Format ein, mit dem die Kenntnisse, Fähigkeiten und Fähigkeiten eines Kandidaten mit Hilfe der MOS 2016; besser getestet werden können&#58;
+  - MOS 2016 Exam Task Instructions enthalten in der Regel nicht den Befehlsnamen, wie in früheren Versionen. So werden beispielsweise Funktionsnamen vermieden und durch Deskriptoren ersetzt. Das bedeutet, dass die Kandidaten den Zweck und die gemeinsame Nutzung der Programmfunktionalität verstehen müssen, um die Aufgaben in jedem der Projekte erfolgreich zu bewältigen.
+  - Das MOS 2016-Prüfungsformat umfasst mehrere Projekte.
+subTitle: Kandidaten auf Excel-Expertenebene für die Microsoft Excel  2016-Prüfung sollten fortgeschrittene Kenntnisse der Excel-Umgebung haben und andere bei der richtigen Nutzung der Funktionen  anleiten können.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3Y5Aw
 providers:
-  - providerType: certiport
-    examUrl: https://www.certiport.com/locator
+- providerType: certiport
+  examUrl: http://www.certiport.com/locator
 locales:
 - en
 - zh-cn
@@ -25,7 +34,7 @@ locales:
 levels:
 - intermediate
 skills:
-- Workbookoptionen und -einstellungen verwalten (10-15%)
+- Verwalten von Arbeitsmappen-Optionen und -Einstellungen (10-15%)
 - Benutzerdefinierte Datenformate und Layouts anwenden (20-25%)
 - Erstellen von fortgeschrittenen Formeln (35-40%)
 - Erstellen von fortgeschrittenen Diagrammen und Objekten (25-30%)
@@ -38,14 +47,15 @@ relatedCertifications:
     uid: certification.mos-excel-2016-expert
 resources:
 - title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Unterkünfte anfordern
-  description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
-  href: https://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
+  description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
+  href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
+
