--- a/learn-certs-pr/exams/az-103.yml
+++ b/learn-certs-pr/exams/az-103.yml
@@ -18,7 +18,7 @@ summary: |-
   Die Kandidaten für dieses examens sollten über Kenntnisse in der Verwendung von PowerShell, der Befehlszeilenschnittstelle, dem Azure Portal, ARM-Vorlagen, Betriebssystemen, Virtualisierung, Cloud-Infrastruktur, Speicherstrukturen und Netzwerken verfügen.
 
   <div style='font-weight&#58; bold;'><br/>NOTE&#58; Wenn Sie dieses Examen bestehen, erhalten Sie die folgende Zertifizierung&#58; <a href="/learn/certifications/azure-administrator">Microsoft Certified&#58; Azure Administrator Associate</a>.</div>
-subTitle: 'Ab dem 1. Mai 2019 müssen Sie nur noch die Exam AZ-103 ablegen, um diese Zertifizierung zu erhalten. Diese neue Prüfung kombiniert die Kompetenzen von AZ-100 und AZ-101 (die am 1. Mai 2019 aus dem Programm genommen wurden), während der Großteil der neuen Prüfung aus AZ-100 stammt. dieses examens misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Verwalten von Azure-Abonnements und -Ressourcen, Implementieren und Verwalten von Speicher, Bereitstellen und Verwalten von virtuellen Maschinen (VMs), Konfigurieren und Verwalten virtueller Netzwerke und Verwalten von Identitäten.'
+subTitle: 'Ab dem 1. Mai 2019 müssen Sie nur noch die Exam AZ-103 ablegen, um diese Zertifizierung zu erhalten. Diese neue Prüfung kombiniert die Kompetenzen von AZ-100 und AZ-101 (die am 1. Mai 2019 aus dem Programm genommen wurden), während der Großteil der neuen Prüfung aus AZ-100 stammt. Dieses examens misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Verwalten von Azure-Abonnements und -Ressourcen, Implementieren und Verwalten von Speicher, Bereitstellen und Verwalten von virtuellen Maschinen (VMs), Konfigurieren und Verwalten virtueller Netzwerke und Verwalten von Identitäten.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VwUR
 practiceTestUrl: https://us.mindhub.com/p/MU-AZ-103?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
@@ -32,7 +32,6 @@ levels:
 - intermediate
 skills:
 - EINE NEUE VERSION DIESES EXAMENS, AZ -104, WURDE AM 2 APRIL 2020 BEREITGESTELLT. Sie können dieses Examen ablegen, bis es am oder um den 31. August 2020 eingestellt wird. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, sich geändert hat.
-- 'HINWEIS: Die Aufzählungszeichen, die unter den im folgenden Dokument gemessenen Fähigkeiten angezeigt werden, sollen veranschaulichen, wie wir diese Fähigkeiten bewerten. Diese Liste ist nicht endgültig oder vollständig.'
 - Verwaltung von Azure-Abonnements und Ressourcen (15-20%)
 - Speicherplatz implementieren und verwalten (15-20%)
 - Bereitstellen und Verwalten von virtuellen Maschinen (VMs) (15-20%)
