--- a/learn-certs-pr/exams/dp-200.yml
+++ b/learn-certs-pr/exams/dp-200.yml
@@ -5,14 +5,7 @@ metadata:
   description: 'Exam DP-200: Implementing an Azure Data Solution'
 uid: exam.dp-200
 displayName: DP-200
-summary: |-
-  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
-  
-  Kandidaten für dieses examens sind Microsoft Azure-Dateningenieure, die mit Geschäftsinteressenten zusammenarbeiten, um die Datenanforderungen für die Implementieren von Datenlösungen zu ermitteln und zu erfüllen, die Azure-Datendienste verwenden.
-
-  Die Datentechniker von Azure sind für datenbezogene Aufgaben verantwortlich, wie die Bereitstellung von Datenspeicherdiensten, die Aufnahme von Streaming- und Batchdaten, die Transformation von Daten, die Implementieren von Sicherheitsanforderungen, die Implementieren von Datenhaltungsrichtlinien, die Identifizierung von Leistungsengpässen und den Zugriff auf externe Datenquellen.
-
-  Die Kandidaten für dieses examens müssen in der Lage sein, Datenlösungen zu implementieren, die die folgenden Azure Services verwenden&#58; Azure Cosmos DB, Azure SQL Database, Azure Synapse Analytics (ehemals Azure SQL DW), Azure Data Lake Storage, Azure Data Factory, Azure Stream Analytics, Azure Databricks und Azure Blob Storage.
+summary: "<div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>\r\n  \r\nKandidaten für dieses examens sind Microsoft Azure-Dateningenieure, die mit Geschäftsinteressenten zusammenarbeiten, um die Datenanforderungen für die Implementieren von Datenlösungen zu ermitteln und zu erfüllen, die Azure-Datendienste verwenden.\r\n\r\n Die Datentechniker von Azure sind für datenbezogene Aufgaben verantwortlich, wie die Bereitstellung von Datenspeicherdiensten, die Aufnahme von Streaming- und Batchdaten, die Transformation von Daten, die Implementieren von Sicherheitsanforderungen, die Implementieren von Datenhaltungsrichtlinien, die Identifizierung von Leistungsengpässen und den Zugriff auf externe Datenquellen.\r\n\r\nDie Kandidaten für dieses examens müssen in der Lage sein, Datenlösungen zu implementieren, die die folgenden Azure Services verwenden&#58; Azure Cosmos DB, Azure SQL Database, Azure Synapse Analytics (ehemals Azure SQL DW), Azure Data Lake Storage, Azure Data Factory, Azure Stream Analytics, Azure Databricks und Azure Blob Storage."
 subTitle: 'dieses examens misst Ihre Kompetenz, die folgenden technischen Aufgaben zu erfüllen: Datenspeicherlösungen implementieren, Datenverarbeitung verwalten und entwickeln sowie Datenlösungen überwachen und optimieren.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3Vzx2
@@ -26,7 +19,6 @@ locales:
 levels:
 - intermediate
 skills:
-- 'HINWEIS: Die Aufzählungszeichen, die unter den im folgenden Dokument gemessenen Fähigkeiten angezeigt werden, sollen veranschaulichen, wie wir diese Fähigkeiten bewerten. Diese Liste ist nicht endgültig oder vollständig.'
 - Implementieren von Datenspeicherlösungen (40-45%)
 - Verwalten und Entwickeln der Datenverarbeitung (25-30%)
 - Überwachen und Optimieren von Datenlösungen (30-35%)
