--- a/learn-certs-pr/exams/dp-900.yml
+++ b/learn-certs-pr/exams/dp-900.yml
@@ -5,19 +5,8 @@ metadata:
   description: 'Exam DP-900: Microsoft Azure Data Fundamentals (beta)'
 uid: exam.dp-900
 displayName: DP-900
-summary: |-
-  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
-
-  Kandidaten für die Azure Data Fundamentals-Zertifizierung sollten über grundlegende Kenntnisse von Kerndatenkonzepten und deren Implementieren mit Hilfe von Microsoft Azure-Daten-Services verfügen.
-
-  dieses examens richtet sich an Kandidaten, die anfangen, mit Daten in der Cloud zu arbeiten.
-
-  Die Kandidaten sollten mit den Konzepten relationaler und nicht relationaler Daten sowie mit verschiedenen Arten von Daten-Workloads wie Transaktions- oder Analysedaten vertraut sein.
-
-  Azure Data Fundamentals kann verwendet werden, um sich auf andere rollenbasierte Azure-Zertifizierungen wie Azure Database Administrator Associate oder Azure Data Engineer Associate vorzubereiten. Dies ist jedoch keine Voraussetzung für eine dieser Zertifizierungen.  
-
-  <div style='font-weight&#58; bold;'><br/>Hinweis&#58; dieses examens wird am oder um den 8. Juni 2020 verfügbar sein.</div>
-subTitle: 'dieses examens wird am oder um den 8. Juni 2020 verfügbar sein. Beweisen Sie, dass Sie Folgendes beschreiben können: Kerndatenkonzepte; Arbeiten mit relationalen Daten in Azure; Arbeiten mit nicht-relationalen Daten in Azur sowie eine Workload-Analyse bei Azure.'
+summary: "<div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>\r\n\r\nKandidaten für die Azure Data Fundamentals-Zertifizierung sollten über grundlegende Kenntnisse von Kerndatenkonzepten und deren Implementieren mit Hilfe von Microsoft Azure-Daten-Services verfügen.\r\n\r\nDieses examens richtet sich an Kandidaten, die anfangen, mit Daten in der Cloud zu arbeiten.\r\n\r\nDie Kandidaten sollten mit den Konzepten relationaler und nicht relationaler Daten sowie mit verschiedenen Arten von Daten-Workloads wie Transaktions- oder Analysedaten vertraut sein.\r\n\r\nAzure Data Fundamentals kann verwendet werden, um sich auf andere rollenbasierte Azure-Zertifizierungen wie Azure Database Administrator Associate oder Azure Data Engineer Associate vorzubereiten. Dies ist jedoch keine Voraussetzung für eine dieser Zertifizierungen.  \r\n\r\n<div style='font-weight&#58; bold;'><br/>Beta-Prüfungen werden nicht sofort bewertet, da wir Daten zur Qualität der Fragen und der Prüfung sammeln. Um mehr zu erfahren <a href=\"/learn/certifications/certification-exams#participating-in-beta-exams\">about the value and importance of beta exams</a>.</div>"
+subTitle: 'Beweisen Sie, dass Sie Folgendes beschreiben können: Kerndatenkonzepte; Arbeiten mit relationalen Daten in Azure; Arbeiten mit nicht-relationalen Daten in Azur sowie eine Workload-Analyse bei Azure. '
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4wsKZ
 locales:
