--- a/learn-certs-pr/exams/pl-100.yml
+++ b/learn-certs-pr/exams/pl-100.yml
@@ -5,21 +5,13 @@ metadata:
   description: 'Exam PL-100: Microsoft Power Platform App Maker (beta)'
 uid: exam.pl-100
 displayName: PL-100
-summary: |-
-  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
-  
-  Der App-Hersteller erstellt Lösungen, um Aufgaben und Prozesse für sich und sein Team zu vereinfachen, zu automatisieren und zu transformieren, die alle über fundiertes Fachwissen im Lösungsbereich verfügen. Sie sind mit wichtigen technischen Business-Analyst-Aufgaben wie Datenmodellierung, grundlegendem UX-Design, Anforderungsanalyse, Prozessanalyse usw. vertraut.</br></br>
-
-  Der App-Hersteller erstellt und erzwingt Geschäftsprozesse, strukturiert die digitale Sammlung von Informationen, verbessert die Effizienz wiederholbarer Aufgaben und automatisiert Geschäftsprozesse.
-
-  Der App-Hersteller verwendet die Hersteller-Tools der Power Plattform, um geschäftliche Probleme zu lösen. Sie haben möglicherweise Erfahrung mit Visual Basic für Anwendungen, Excel-Pivot-Tabellen, Teams und anderen Tools. Sie sollten ein grundlegendes Verständnis von Datenmodellen, Benutzeroberfläche und Prozessen haben. Der App-Hersteller ist sich der Funktionen und Einschränkungen der verfügbaren Tools bewusst und weiß, wie diese angewendet werden.
-
-  Der App-Hersteller ist selbstgesteuert und lösungsorientiert. Sie verfügen möglicherweise nicht über eine formelle IT-Schulung, können jedoch mit Hilfe von Technologie Geschäftsprobleme mit einer persönlichen Wachstumsphilosophie lösen. Sie verstehen die betrieblichen Bedürfnisse und haben eine Vision des gewünschten Ergebnisses. Sie nähern sich Problemen mit schrittweisen und iterativen Strategien.  
-
-  <div style='font-weight&#58; bold;'><br/>Hinweis&#58; dieses examens wird ab Juli 2020 verfügbar sein.</div>
+summary: "<div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>\r\n\r\nDer App-Hersteller erstellt Lösungen, um Aufgaben und Prozesse für sich und sein Team zu vereinfachen, zu automatisieren und zu transformieren, die alle über fundiertes Fachwissen im Lösungsbereich verfügen. Sie sind mit wichtigen technischen Business-Analyst-Aufgaben wie Datenmodellierung, grundlegendem UX-Design, Anforderungsanalyse, Prozessanalyse usw. vertraut.</br></br>\r\n\r\nDer App-Hersteller erstellt und erzwingt Geschäftsprozesse, strukturiert die digitale Sammlung von Informationen, verbessert die Effizienz wiederholbarer Aufgaben und automatisiert Geschäftsprozesse.\r\n\r\nDer App-Hersteller verwendet die Hersteller-Tools der Power Plattform, um geschäftliche Probleme zu lösen. Sie haben möglicherweise Erfahrung mit Visual Basic für Anwendungen, Excel-Pivot-Tabellen, Teams und anderen Tools. Sie sollten ein grundlegendes Verständnis von Datenmodellen, Benutzeroberfläche und Prozessen haben. Der App-Hersteller ist sich der Funktionen und Einschränkungen der verfügbaren Tools bewusst und weiß, wie diese angewendet werden.\r\n\r\nDer App-Hersteller ist selbstgesteuert und lösungsorientiert. Sie verfügen möglicherweise nicht über eine formelle IT-Schulung, können jedoch mit Hilfe von Technologie Geschäftsprobleme mit einer persönlichen Wachstumsphilosophie lösen. Sie verstehen die betrieblichen Bedürfnisse und haben eine Vision des gewünschten Ergebnisses. Sie nähern sich Problemen mit schrittweisen und iterativen Strategien.  \r\n\r\n<div style='font-weight&#58; bold;'><br/>Hinweis&#58; dieses examens wird ab Juli 2020 verfügbar sein.</div>"
 subTitle: 'dieses examens wird ab Juli 2020 verfügbar sein. In dieser Prüfung wird Ihre Fähigkeit gemessen, folgende technische Aufgaben zu erfüllen: Lösungen entwerfen, Lösungen schaffen, Daten analysieren sowie Lösungen zu implementieren und zu verwalten.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4wo07
+providers:
+- providerType: gsi
+  examUrl: https://docs.microsoft.com/learn/certifications/skillingoffer
 locales:
 - en
 levels:
