--- a/learn-certs-pr/m365-developer-associate.yml
+++ b/learn-certs-pr/m365-developer-associate.yml
@@ -6,7 +6,7 @@ metadata:
 uid: certification.m365-developer-associate
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
-  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
+  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong></font><br/><br/></div>
 
   Microsoft 365 Developer entwerfen, erstellen, testen und warten Anwendungen und Lösungen, die für die Produktivitäts- und Kollaborationsanforderungen von Unternehmen optimiert sind, die die Microsoft 365-Plattform nutzen.
 
@@ -15,7 +15,6 @@ subTitle: Microsoft 365 Developer entwerfen, erstellen, testen und warten Anwend
 levels:
 - intermediate
 skills:
-- 'HINWEIS: Die Aufzählungszeichen, die unter den im folgenden Dokument gemessenen Fähigkeiten angezeigt werden, sollen veranschaulichen, wie wir diese Fähigkeiten bewerten. Diese Liste ist nicht endgültig oder vollständig.'
 - Microsoft Identity einrichten
 - Apps mit Microsoft Graph erstellen
 - SharePoint erweitern und anpassen
