--- a/learn-certs-pr/microsoft-office-specialist-expert-2019.yml
+++ b/learn-certs-pr/microsoft-office-specialist-expert-2019.yml
@@ -10,7 +10,7 @@ summary: |-
 
   Zeigen Sie, dass Sie über die fortgeschrittenen Fähigkeiten verfügen, um Office optimal zu nutzen, indem Sie eine Microsoft Office Specialist&#58; Expert Zertifizierung in mehreren Office-Programmen erwerben.
 
-  Um eine Microsoft Office;-Zertifizierung zu erhalten, müssen Sie die folgenden Anforderungen erfüllen&#58;
+  Um eine Microsoft Office; -Zertifizierung zu erhalten, müssen Sie die folgenden Anforderungen erfüllen&#58;
 
   - Erhalten Sie eine Microsoft Office Specialist Associate-Zertifizierung, indem Sie drei der folgenden Associate-Prüfungen&#58;
     - [MO-100&#58; Microsoft Word (Word and Word 2019)](/learn/certifications/exams/mo-100)
@@ -18,7 +18,7 @@ summary: |-
     - [MO-300&#58; Microsoft PowerPoint (PowerPoint and PowerPoint 2019)](/learn/certifications/exams/mo-300)
     - [MO-400&#58; Microsoft Outlook (Outlook and Outlook 2019)](/learn/certifications/exams/mo-400)
 
-  - Bestehen Sie die folgenden drei Expertenprüfungen&#58;
+  - Bestehen Sie zwei der folgenden drei Prüfungen&#58;
     - [MO-101&#58; Microsoft Word Expert (Word and Word 2019)](/learn/certifications/exams/mo-101)
     - [MO-201&#58; Microsoft Excel Expert (Excel and Excel 2019)](/learn/certifications/exams/mo-201)
     - [MO-500&#58; Microsoft Access Expert (Access and Access 2019)](/learn/certifications/exams/mo-500)
@@ -26,8 +26,8 @@ subTitle: 'Zeigen Sie, dass Sie über die fortgeschrittenen Fähigkeiten verfüg
 levels:
 - advanced
 skills:
-- Microsoft Word Expert (Word and Word 2019)
-- Microsoft Excel Expert (Excel and Excel 2019)
+- Microsoft Word Expert (Word und Word 2019)
+- Microsoft Excel Expert (Excel und Excel 2019)
 - Microsoft Access Expert (Access and Access 2019)
 roles:
 - business-user
