--- a/learn-certs-pr/azure-data-fundamentals.yml
+++ b/learn-certs-pr/azure-data-fundamentals.yml
@@ -2,22 +2,11 @@
 title: 'Microsoft Certified: Azure Data Fundamentals'
 metadata:
   title: 'Microsoft Certified: Azure Data Fundamentals'
-  description: Diese Zertifizierung wird am oder um den 8. Juni 2020 verfügbar sein. Azure Data Fundamentals überprüft das grundlegende Wissen über Kerndatenkonzepte und deren Implementieren mit Hilfe von Microsoft Azure-Daten-Services.
+  description: Azure Data Fundamentals überprüft das grundlegende Wissen über Kerndatenkonzepte und deren Implementieren mit Hilfe von Microsoft Azure-Daten-Services.
 uid: certification.azure-data-fundamentals
 iconUrl: /media/learn/certification/badges/microsoft-certified-fundamentals-badge.svg
-summary: |-
-  <div><strong><font color='red'>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</font></strong><br/><br/></div>
-
-  Kandidaten für die Azure Data Fundamentals-Zertifizierung sollten über grundlegende Kenntnisse der Kerndatenkonzepte und deren Implementieren mit Hilfe von Microsoft Azure-Daten-Services verfügen.  
-
-  Diese Zertifizierung richtet sich an Kandidaten, die mit Daten in der Cloud arbeiten.  
-
-  Die Kandidaten sollten mit den Konzepten relationaler und nicht relationaler Daten sowie mit verschiedenen Arten von Daten-Workloads wie Transaktions- oder Analysedaten vertraut sein.  
-
-  Azure Data Fundamentals kann verwendet werden, um sich auf andere rollenbasierte Azure-Zertifizierungen wie Azure Database Administrator Associate oder Azure Data Engineer Associate vorzubereiten. Dies ist jedoch keine Voraussetzung für eine dieser Zertifizierungen.  
-
-  <div><br/><strong>Hinweis&#58; Diese Zertifizierung wird am oder um den 8. Juni 2020 verfügbar sein.</strong></div>
-subTitle: Diese Zertifizierung wird am oder um den 8. Juni 2020 verfügbar sein. Azure Data Fundamentals überprüft das grundlegende Wissen über Kerndatenkonzepte und deren Implementieren mit Hilfe von Microsoft Azure-Daten-Services.
+summary: "<div><strong><font color='red'>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</font></strong><br/><br/></div>\r\n\r\nKandidaten für die Azure Data Fundamentals-Zertifizierung sollten über grundlegende Kenntnisse der Kerndatenkonzepte und deren Implementieren mit Hilfe von Microsoft Azure-Daten-Services verfügen.  \r\n\r\nDiese Zertifizierung richtet sich an Kandidaten, die mit Daten in der Cloud arbeiten.  \r\n\r\nDie Kandidaten sollten mit den Konzepten relationaler und nicht relationaler Daten sowie mit verschiedenen Arten von Daten-Workloads wie Transaktions- oder Analysedaten vertraut sein.  \r\n\r\nAzure Data Fundamentals kann verwendet werden, um sich auf andere rollenbasierte Azure-Zertifizierungen wie Azure Database Administrator Associate oder Azure Data Engineer Associate vorzubereiten. Dies ist jedoch keine Voraussetzung für eine dieser Zertifizierungen."
+subTitle: Azure Data Fundamentals überprüft das grundlegende Wissen über Kerndatenkonzepte und deren Implementieren mit Hilfe von Microsoft Azure-Daten-Services.
 levels:
 - beginner
 skills:
