--- a/learn-certs-pr/d365-finance-and-operations-apps-developer-associate.yml
+++ b/learn-certs-pr/d365-finance-and-operations-apps-developer-associate.yml
@@ -2,13 +2,13 @@
 title: 'Microsoft Certified: Dynamics 365: Finance and Operations Apps Developer Associate'
 metadata:
   title: 'Microsoft Certified: Dynamics 365: Finance and Operations Apps Developer Associate'
-  description: Developers (Entwickler), die mit Finance and Operations Apps in Microsoft Dynamics 365 arbeiten, implementieren und erweitern Anwendungen, um die Anforderungen des Unternehmens zu erfüllen. Die Kandidaten bieten vollständig realisierte Lösungen durch standardisierte Anwendungscodierungsmuster, erweiterbare Funktionen und externe Integrationen.
+  description: Developers (Entwickler), die mit Finance and Operations Apps in Microsoft Dynamics 365 arbeiten, implementieren und erweitern Anwendungen, um die Anforderungen des Unternehmens zu erfüllen. Die Kandidaten bieten vollständig realisierte Lösungen, indem sie standardisierte Anwendungskodierungsmuster, erweiterbare Funktionen und externe Integrationen verwenden.
 uid: certification.d365-finance-and-operations-apps-developer-associate
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
-  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
+  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong></font><br/><br/></div>
 
-  Developers (Entwickler), die mit Finance and Operations Apps in Microsoft Dynamics 365 arbeiten, implementieren und erweitern Anwendungen, um die Anforderungen des Unternehmens zu erfüllen. Die Kandidaten bieten vollständig realisierte Lösungen durch standardisierte Anwendungscodierungsmuster, erweiterbare Funktionen und externe Integrationen.
+  Developers (Entwickler), die mit Finance and Operations Apps in Microsoft Dynamics 365 arbeiten, implementieren und erweitern Anwendungen, um die Anforderungen des Unternehmens zu erfüllen. Die Kandidaten bieten vollständig realisierte Lösungen, indem sie standardisierte Anwendungskodierungsmuster, erweiterbare Funktionen und externe Integrationen verwenden.
 subTitle: Developers (Entwickler), die mit Finance and Operations Apps in Microsoft Dynamics 365 arbeiten, implementieren und erweitern Anwendungen, um die Anforderungen des Unternehmens zu erfüllen.
 levels:
 - intermediate
