--- a/learn-certs-pr/exams/70-334.yml
+++ b/learn-certs-pr/exams/70-334.yml
@@ -8,11 +8,11 @@ displayName: 70-334
 summary: |-
   <div>
   <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
-  <div><strong>Diese Prüfung wird am 31. Januar 2021 um 23&#58;59 Uhr (Ortszeit) eingestellt. Nach diesem Datum können Sie die Prüfung nicht mehr ablegen. Erfahren Sie mehr über <a href='/learn/certifications/retired-certification-exams'>bevorstehende Prüfungseinstellungen</a>.<br/><br/></strong></div>
+  <div><strong>Dieses examens wird am 31. Januar 2021 um 23&#58;59 Uhr (Ortszeit) eingestellt. Nach diesem Datum können Sie die Prüfung nicht mehr ablegen. Mehr erfahren über <a href='/learn/certifications/retired-certification-exams'>bevorstehende Prüfungseinstellungen</a>.<br/><br/></strong></div>
   </div>
 
-  Als Kandidaten für diese Prüfung kommen IT- und Telekommunikationsberater infrage, die Lösungen für vereinheitlichte Kommunikation entwerfen, planen, implementieren und verwalten. Die Kandidaten müssen in der Lage sein, geschäftliche Anforderungen in einer technischen Architektur umzusetzen und Lösungen für vereinheitlichte Kommunikation zu entwerfen. Kandidaten sollten über mindestens zwei Jahre Erfahrung mit Skype for Business-Technologien verfügen und mit unterstützten Migrationsszenarien vertraut sein. Die Kandidaten sollten in der Lage sein, Skype for Business-Lösungen für Endbenutzer, Endgeräte, Telefonie, Audio-/Video- und Webkonferenzen, Sicherheit und hohe Verfügbarkeit bereitzustellen. Die Kandidaten sollten auch wissen, wie man Microsoft-Tools zur Überwachung und Fehlerbehebung von Skype for Business einsetzt. Außerdem sollten Kandidaten Erfahrung mit Active Directory Domaindiensten, Datennetzwerken sowie Telekommunikationsstandards und -komponenten für die Konfiguration von Skype for Business vorweisen können. Die Kandidaten sollten mit den Anforderungen für die Integration von Skype for Business in Microsoft Exchange Server und Office 365 vertraut sein.
-subTitle: Als Kandidaten für diese Prüfung kommen IT- und Telekommunikationsberater infrage, die Lösungen für vereinheitlichte Kommunikation entwerfen, planen, implementieren und verwalten. Die Kandidaten müssen in der Lage sein, geschäftliche Anforderungen in einer technischen Architektur umzusetzen und Lösungen für vereinheitlichte Kommunikation zu entwerfen. Kandidaten sollten über mindestens zwei Jahre Erfahrung mit Skype for Business-Technologien verfügen und mit unterstützten Migrationsszenarien vertraut sein. Die Kandidaten sollten in der Lage sein, Skype for Business-Lösungen für Endbenutzer, Endgeräte, Telefonie, Audio-/Video- und Webkonferenzen, Sicherheit und hohe Verfügbarkeit bereitzustellen. Die Kandidaten sollten auch wissen, wie man Microsoft-Tools zur Überwachung und Fehlerbehebung von Skype for Business einsetzt. Außerdem sollten Kandidaten Erfahrung mit Active Directory Domaindiensten, Datennetzwerken sowie Telekommunikationsstandards und -komponenten für die Konfiguration von Skype for Business vorweisen können. Die Kandidaten sollten mit den Anforderungen für die Integration von Skype for Business in Microsoft Exchange Server und Office 365 vertraut sein.
+  Als Kandidaten für diese Prüfung kommen IT- und Telekommunikationsberater infrage, die Lösungen für vereinheitlichte Kommunikation entwerfen, planen, implementieren und verwalten. Die Kandidaten müssen in der Lage sein, geschäftliche Anforderungen in einer technischen Architektur umzusetzen und Lösungen für vereinheitlichte Kommunikation(UC) zu entwerfen. Kandidaten sollten über mindestens zwei Jahre Erfahrung mit Skype for Business-Technologien verfügen und mit unterstützten Migrationsszenarien vertraut sein. Die Kandidaten sollten in der Lage sein, Skype for Business-Lösungen für Endbenutzer, Endgeräte, Telefonie, Audio-/Video- und Webkonferenzen, Sicherheit und hohe Verfügbarkeit bereitzustellen. Die Kandidaten sollten auch wissen, wie man Microsoft-Tools zur Überwachung und Fehlerbehebung von Skype for Business einsetzt. Außerdem sollten Kandidaten Erfahrung mit Active Directory Domaindiensten, Datennetzwerken sowie Telekommunikationsstandards und -komponenten für die Konfiguration von Skype for Business vorweisen können. Die Kandidaten sollten mit den Anforderungen für die Integration von Skype for Business in Microsoft Exchange Server und Office 365 vertraut sein.
+subTitle: Als Kandidaten für diese Prüfung kommen IT- und Telekommunikationsberater infrage, die Lösungen für vereinheitlichte Kommunikation entwerfen, planen, implementieren und verwalten. Die Kandidaten müssen in der Lage sein, geschäftliche Anforderungen in einer technischen Architektur umzusetzen und Lösungen für vereinheitlichte Kommunikation(UC) zu entwerfen. Kandidaten sollten über mindestens zwei Jahre Erfahrung mit Skype for Business-Technologien verfügen und mit unterstützten Migrationsszenarien vertraut sein. Die Kandidaten sollten in der Lage sein, Skype for Business-Lösungen für Endbenutzer, Endgeräte, Telefonie, Audio-/Video- und Webkonferenzen, Sicherheit und hohe Verfügbarkeit bereitzustellen. Die Kandidaten sollten auch wissen, wie man Microsoft-Tools zur Überwachung und Fehlerbehebung von Skype for Business einsetzt. Außerdem sollten Kandidaten Erfahrung mit Active Directory Domaindiensten, Datennetzwerken sowie Telekommunikationsstandards und -komponenten für die Konfiguration von Skype for Business vorweisen können. Die Kandidaten sollten mit den Anforderungen für die Integration von Skype for Business in Microsoft Exchange Server und Office 365 vertraut sein.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3XSBg
 practiceTestUrl: https://www.mindhub.com/70-334-Core-Solutions-of-Microsoft-Skype-for-Busi-p/mu-70-334_p.htm?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
@@ -23,10 +23,9 @@ locales:
 levels:
 - advanced
 skills:
-- 'HINWEIS: Die Aufzählungszeichen, die unter den im folgenden Dokument gemessenen Fähigkeiten angezeigt werden, sollen veranschaulichen, wie wir diese Fähigkeiten bewerten. Diese Liste ist nicht endgültig oder vollständig.'
-- Planen und Entwerfen von Skype for Business (35–40 %)
-- Bereitstellen und Konfigurieren von Skype for Business (30–35 %)
-- Verwaltung und Fehlerbehebung für Skype for Business (30–35 %)
+- Planen und Entwerfen von Skype for Business (35–40%)
+- Bereitstellen und Konfigurieren von Skype for Business (30–35%)
+- Verwaltung und Fehlerbehebung für Skype for Business (30–35%)
 retirementDate: 01/31/2021
 roles:
 - administrator
@@ -45,7 +44,7 @@ resources:
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Unterkünfte anfordern
-  description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
+  description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
   href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
