--- a/learn-certs-pr/exams/70-339.yml
+++ b/learn-certs-pr/exams/70-339.yml
@@ -8,7 +8,7 @@ displayName: 70-339
 summary: |-
   <div>
   <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
-  <div><strong>Diese Prüfung wird am 31. Januar 2021 um 23&#58;59 Uhr (Ortszeit) eingestellt. Nach diesem Datum können Sie die Prüfung nicht mehr ablegen. Erfahren Sie mehr über <a href='/learn/certifications/retired-certification-exams'>bevorstehende Prüfungseinstellungen</a>.<br/><br/></strong></div>
+  <div><strong>Dieses examens wird am 31. Januar 2021 um 23&#58;59 Uhr (Ortszeit) eingestellt. Nach diesem Datum können Sie die Prüfung nicht mehr ablegen. Mehr erfahren über <a href='/learn/certifications/retired-certification-exams'>bevorstehende Prüfungseinstellungen</a>.<br/><br/></strong></div>
   </div>
 
   Die Prüfung ist für erfahrene IT-Experten gedacht, die SharePoint 2016 in einem Rechenzentrum und in der Cloud installieren, konfigurieren, bereitstellen und verwalten. Kandidaten haben in der Regel mehr als vier Jahre Erfahrung in der Planung und Verwaltung von SharePoint und anderen Kerntechnologien, von denen SharePoint abhängt, einschließlich Windows Server 2008 R2 oder höher, Internet Information Services (IIS), SQL Server 2008 R2 oder höher, Active Directory und Netzwerkinfrastrukturdienste.
@@ -33,12 +33,11 @@ locales:
 levels:
 - intermediate
 skills:
-- 'HINWEIS: Die Aufzählungszeichen, die unter den im folgenden Dokument gemessenen Fähigkeiten angezeigt werden, sollen veranschaulichen, wie wir diese Fähigkeiten bewerten. Diese Liste ist nicht endgültig oder vollständig.'
-- Design der SharePoint-Infrastruktur (15-20 %)
+- Design der SharePoint-Infrastruktur (15-20%)
 - Planen von Authentifizierung und Sicherheit (15–20%)
 - Planen der Workload-Optimierung (15–20%)
 - Produktivitätslösungen planen (15-20%)
-- Verwalten von Suchfunktionen (10–15 %)
+- Verwalten von Suchfunktionen (10–15%)
 - Planen und Konfigurieren von Clouddiensten (5–10%)
 - Überwachen und Optimieren einer SharePoint-Umgebung (10–15%)
 retirementDate: 01/31/2021
@@ -60,7 +59,7 @@ resources:
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Unterkünfte anfordern
-  description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
+  description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
   href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
