--- a/learn-certs-pr/exams/ai-100.yml
+++ b/learn-certs-pr/exams/ai-100.yml
@@ -11,14 +11,14 @@ summary: |-
   <div style='font-weight&#58; bold;'>Der Inhalt dieser Prüfung wurde am 20. Mai 2020 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.<br/><br/></div>
   </div>
 
-  Die Kandidaten dieser Prüfung analysieren die Anforderungen zum AI-Lösungen, empfehlen geeignete Tools und Technologien und setzen Lösungen um, die den Anforderungen an Skalierbarkeit und Leistung entsprechen.
+  Kandidaten für diese Prüfung sollten über Fachkenntnisse in kognitiven Diensten, maschinellems Lernen und Knowledge-Mining nutzen, um Microsoft exams Lösungen zu entwickeln und zu implementieren, die Verarbeitung natürlicher Sprache, gesprochener Sprache, Computervision und Konversations-AI umfassen.
 
-  Die Kandidaten übersetzen die Ideen von Lösungsarchitekten und arbeiten mit Datenwissenschaftlern, Datentechnikern, IoT-Spezialisten und AI-Entwicklern zusammen, um komplette End-to-End-Lösungen zu entwickeln. Kandidaten entwerfen und implementieren AI-Apps und Agenten, die Microsoft Azure Cognitive Services und Azure Bot Service nutzen. Kandidaten können Lösungen empfehlen, die Open-Source-Technologien verwenden.
+  Zu den Aufgaben eines Azure AI-Ingenieurs gehören das Analysieren von Anforderungen für AI-Lösungen, das Empfehlen entsprechender Tools und Technologien sowie das Entwerfen und Implementieren von AI-Lösungen, die die Anforderungen an Skalierbarkeit und Leistung erfüllen.
 
-  Die Kandidaten verstehen die Komponenten des Azure AI-Portfolios und die verfügbaren Datenspeicheroptionen.
+  Azure AI Engineers übersetzen die Ideen von Lösungsarchitekten und arbeiten mit Datenwissenschaftlern, Datentechnikern, IoT-Spezialisten und software Entwicklern zusammen, um komplette End-to-End-Lösungen zu entwickeln.
 
-  Die Kandidaten implementieren AI-Lösungen, die Cognitive Services, Azure Bots, Azure Search und Datenspeicherung in Azure nutzen. Die Kandidaten verstehen, wann eine benutzerdefinierte API entwickelt werden sollte, um spezifische Anforderungen zu erfüllen.
-subTitle: 'dieses examens misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Analyse der Lösungsanforderungen, Entwurf von Lösungen, Integration von AI-Modellen in Lösungen sowie Bereitstellung und Verwaltung von Lösungen.'
+  Ein Kandidat für diese Prüfung sollte über Kenntnisse und Erfahrung im Entwerfen und Implementieren von KI-Apps und Agenten verfügen, die Microsoft Azure Cognitive Services, Azure Bot-Service, Azure Cognitive Search und Datenspeicherung in Azure verwenden. Darüber hinaus sollten Kandidaten in der Lage sein, Lösungen zu empfehlen, die Open Source-Technologien verwenden, die Komponenten des Azure AI-Portfolios und die verfügbaren Datenspeicheroptionen zu verstehen und zu erkennen, wann eine benutzerdefinierte API entwickelt werden sollte, um bestimmte Anforderungen zu erfüllen.
+subTitle: 'Dieses Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Analyse der Lösungsanforderungen, Entwurf von Lösungen, Integration von AI-Modellen in Lösungen sowie Bereitstellung und Verwaltung von Lösungen.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VC6C
 scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=AI-100&examname=Exam%20AI-100:%20Designing%20and%20Implementing%20an%20Azure%20AI%20Solution&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fai-100
@@ -30,7 +30,7 @@ locales:
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wurde am 20. Mai 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich geändert hat.
+- Der Inhalt dieser Prüfung wurde am 20. Mai 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich geändert hat.'
 - Lösungsanforderungen analysieren (25-30%)
 - Konzipieren von AI-Lösungen (40-45%)
 - Implementieren und Überwachen von AI-Lösungen (25-30%)
