--- a/learn-certs-pr/exams/az-120.yml
+++ b/learn-certs-pr/exams/az-120.yml
@@ -6,14 +6,20 @@ metadata:
 uid: exam.az-120
 displayName: AZ-120
 summary: |-
-  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
+  <div>
+  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Learn more</a>.</strong><br/><br/></div><div style='font-weight&#58; bold;'>Der Inhalt dieser Prüfung wurde am 20. Mai 2020 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.<br/><br/></div>
+  </div>
 
-  Kandidaten für diese Prüfung sind Architekten und Ingenieure, die über Kenntnisse des SAP Landscape Certification Prozesses und von Industriestandards verfügen, die für den langfristigen Betrieb einer SAP-Lösung spezifisch sind. Die Kandidaten geben Empfehlungen zu den Dienstleistungen ab und passen die Ressourcen nach Bedarf an, um eine optimale Belastbarkeit, Leistung, Größenordnung, Bereitstellung, Größe und Überwachung zu gewährleisten.
+  Kandidaten für diese Prüfung sollten Architekten oder Ingenieure sein, die über umfassende Erfahrung und Kenntnisse der SAP-Systemlandschaft und der Industriestandards verfügen, die für den langfristigen Betrieb einer SAP-Lösung unter Microsoft Azure spezifisch sind.
 
-  Architekten von Azure for SAP Workloads sollten über umfangreiche Erfahrungen und Kenntnisse in den Bereichen SAP-Anwendungen, SAP HANA, S/4HANA, SAP NetWeaver, SAP BW, OS Server für SAP-Anwendungen und Datenbanken, Azure Portal, ARM-Templates, Betriebssysteme, Virtualisierung, Cloud-Infrastruktur, Speicherstrukturen, Hochverfügbarkeitsdesign, Disaster-Recovery-Design, Datensicherungskonzepte und Networking verfügen.
+  Zu den Aufgaben eines Architekten oder Ingenieurs für Azure for SAP Workloads gehören Empfehlungen zu Services und die Anpassung der Ressourcen entsprechend der optimalen Ausfallsicherheit, Leistung, Skalierung, Bereitstellung, Größe und Überwachung.
 
-  Es wird dringend empfohlen, dass die Kandidaten für diese Prüfung zusätzlich zu den SAP HANA- und Linux-Zertifizierungen eine Azure Administrator- oder Azure Architect Zertifizierung besitzen.
-subTitle: 'Diese Prüfung misst Ihre Kompetenz, die folgenden technischen Aufgaben zu erledigen: SAP-Workloads nach Azure übertragen, eine Azure-Lösung zur Unterstützung von SAP-Workloads entwickeln, Azure-SAP-Workloads erstellen und bereitstellen, Azure-Infrastruktur für SAP-Workloads validieren und die Azure-SAP-Architektur operationalisieren.'
+  Architekten oder Ingenieure von Azure für SAP-Workload-Partner arbeiten mit Cloud-Administratoren, Cloud-Datenbankadministratoren und Kunden zusammen, um Lösungen zu implementieren.
+
+  Ein Kandidat für diese Prüfung sollte über umfangreiche Erfahrung und Kenntnisse in SAP-Anwendungen verfügen&#58; SAP HANA, S / 4HANA, SAP NetWeaver, SAP BW / 4HANA, Betriebssystemserver für SAP-Anwendungen und -Datenbanken, Azure-Portal, ARM-Vorlagen, Betriebssysteme, Virtualisierung, Cloud-Infrastruktur, Speicherstrukturen, Hochverfügbarkeitsdesign, Disaster Recovery-Design, Datenschutz Konzepte und Vernetzung.
+
+  Für diese Prüfung wird dringend empfohlen, zusätzlich zu den SAP-HANA- und Linux-Zertifizierungen eine Azure Administrator Associate- oder Azure Solutions Architect Expert-Zertifizierung zu erwerben.
+subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben auszuführen: Migrieren von SAP Workloads nach Azure, Entwerfen einer Azure-Lösung zur Unterstützung von SAP Workloads, Erstellen und Bereitstellen von Azure SAP Workloads, Validieren der Azure-Infrastruktur für SAP Workloads und die Azure SAP-Architektur operationalisieren.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE43XOu
 scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=AZ-120&examname=Exam%20AZ-120:%20Planning%20and%20Administering%20Microsoft%20Azure%20for%20SAP%20Workloads&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-120
@@ -25,7 +31,7 @@ locales:
 levels:
 - advanced
 skills:
-- 'HINWEIS: Die Aufzählungszeichen, die unter den im folgenden Dokument gemessenen Fähigkeiten angezeigt werden, sollen veranschaulichen, wie wir diese Fähigkeiten bewerten. Diese Liste ist nicht endgültig oder vollständig.'
+- Der Inhalt dieser Prüfung wird am 21. Juli 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich ändern wird.
 - SAP-Workloads nach Azure übertragen (10-15%)
 - Erstellen einer Azure-Lösung zur Unterstützung von SAP-Workloads (20-25%)
 - Erstellen und Bereitstellen von Azure SAP Workloads (35-40%)
@@ -63,7 +69,7 @@ resources:
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Unterkünfte anfordern
-  description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
+  description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
   href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
