--- a/learn-certs-pr/exams/az-900.yml
+++ b/learn-certs-pr/exams/az-900.yml
@@ -27,6 +27,8 @@ providers:
   examUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=AZ-900&examname=Exam%20AZ-900:%20Microsoft%20Azure%20Fundamentals&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-900
 - providerType: certiport
   examUrl: http://www.certiport.com/locator
+- providerType: gsi
+  examUrl: https://docs.microsoft.com/learn/certifications/skillingoffer
 locales:
 - en
 - ja
