--- a/learn-certs-pr/exams/ms-500.yml
+++ b/learn-certs-pr/exams/ms-500.yml
@@ -8,7 +8,7 @@ displayName: MS-500
 summary: |-
   <div>
   <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
-  <div style='font-weight&#58; bold;'>Der Inhalt dieser Prüfung wird am 8. Juni 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zu den gemessenen Fähigkeiten herunter, um zu sehen, was sich ändern wird.<br/><br/></div>
+  <div style='font-weight&#58; bold;'>Der Inhalt dieser Prüfung wurde am 8. Juni 2020 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.<br/><br/></div>
   </div>
 
   Kandiaten für dieses examens implementieren, verwalten und überwachen Sicherheits- und Compliancelösungen für Microsoft 365 und hybride Umgebungen. Der Microsoft 365 Sicherheits-Administrator sichert proaktiv Microsoft 365 Unternehmensumgebungen, reagiert auf Bedrohung-en, führt Investigationen durch und gewährleistet Datensicherheit. Der Microsoft 365 Security Administrator arbeitet mit einem Microsoft 365 Enterprise Administrator den Geschäftsteilhabern und anderen Workload Administratoren für Planung und Implementierung von Sicherheitsstrategien zur Gewährleistung zusammen, dass die Lösungen mit den Richtlinien und Bestimmungen der Organisation übereinstimmen.
@@ -19,18 +19,22 @@ subTitle: 'dieses examens misst Ihre Kompetenz, folgende technische Aufgaben zu 
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VEI3
 practiceTestUrl: https://www.mindhub.com/p/MU-MS-500?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MS-500&examname=Exam%20MS-500:%20Microsoft%20365%20Security%20Administration&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fms-500
+providers:
+  - providerType: pearson-vue
+    examUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MS-500&examname=Exam%20MS-500:%20Microsoft%20365%20Security%20Administration&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fms-500
+  - providerType: gsi
+    examUrl: https://docs.microsoft.com/learn/certifications/skillingoffer
 locales:
 - en
 - ja
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wird am 8. Juni 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich ändern wird.
+- Der Inhalt dieser Prüfung wurde am 8. Juni 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich geändert hat.
 - Implementieren von Identitäten und Zugang (30-35%)
 - Implementieren und Verwalten von Bedrohungsschutz (20-25%)
 - Implementieren und Verwalten von Informationsschutz (15-20%)
-- Management und Konformität-Funktionen in Microsoft 365 verwalten (25-30%)
+- Management und Konformität-Funktionen in Microsoft 365 verwalten (20-25%)
 roles:
 - administrator
 products:
