--- a/learn-certs-pr/exams/ms-900.yml
+++ b/learn-certs-pr/exams/ms-900.yml
@@ -8,7 +8,7 @@ displayName: MS-900
 summary: |-
   <div>
   <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
-  <div style='font-weight&#58; bold;'>Der Inhalt dieser Prüfung wurde am 14. April 2020 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.<br/><br/></div>
+  <div style='font-weight&#58; bold;'>Der Inhalt dieser Prüfung wird am 8. Juli 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zu den gemessenen Fähigkeiten herunter, um zu sehen, was sich ändern wird.<br/><br/></div>
   </div>
 
   Diese Prüfung ist für Kandidaten, die Ihre grundlegenden Kenntnisse zu Überlegungen und Vorteilen von der Einbindung von Cloud Diensten im allgemeinen und des Software as a Service (SaaS) Modells unter Beweis stellen möchten. Die Prüfung umfasst auch Kenntnisse über die verfügbaren Optionen und Vorteile einer Implementierung von Microsoft 365 Cloud- Service-Angeboten.
@@ -29,7 +29,7 @@ providers:
 levels:
 - beginner
 skills:
-- Der Inhalt dieser Prüfung wurde am 14. April 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich geändert hat.
+- Der Inhalt dieser Prüfung wird am 8. Juli 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich ändern wird.
 - Cloud-Konzepte beschreiben (15-20%)
 - Beschreiben der wichtigsten Microsoft 365-Dienste und -Konzepte (30-35%)
 - Beschreiben der Sicherheits-, Compliance-, Datenschutz- und Vertrauensoptionen in Microsoft 365 (25-30%)
@@ -64,7 +64,7 @@ resources:
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Unterkünfte anfordern
-  description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
+  description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
   href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
